Initial JDK 11 with stable build